# trend-finder

./: README.md  course.md
agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  result.json
agent/agent/: graph.py  state.py
agent/agent/constants/: enums.py  prompts.py
agent/agent/nodes/: clusterer.py  extractor.py  scraper.py
agent/agent/utils/: apify.py  cluster_analytics.py  keyword_extractor.py  model.py  scorer.py  test_scorer_fix.py  trend_explorer.py
agent/db/: init.py  models.py
agent/env/: pyvenv.cfg
agent/src/: __init__.py
agent/src/config/: __init__.py  constants.py  prompts.py  settings.py
agent/src/core/: __init__.py  graph.py  state.py
agent/src/database/: connection.py  models.py
agent/src/llm/: __init__.py  models.py
agent/src/nodes/: __init__.py  clusterer.py  extractor.py  scraper.py
agent/src/schemas/: __init__.py  analytics.py  enums.py
agent/src/services/: __init__.py
agent/src/services/clustering/: analytics.py  keyword_extractor.py
agent/src/services/scoring/: product_scorer.py  trend_scorer.py
agent/src/trend_finder/: __main__.py
agent/src/trend_finder/core/: graph.py  state.py
agent/src/trend_finder/database/: __init__.py  connection.py
agent/src/trend_finder/llm/: models.py
agent/src/trend_finder/nodes/: clusterer.py  extractor.py  scraper.py
agent/src/trend_finder/schemas/: clusters.py  products.py  search.py
agent/src/trend_finder/services/clustering/: __init__.py  analytics.py
agent/src/trend_finder/services/scoring/: __init__.py  product_scorer.py  trend_scorer.py
frontend/: .env.example  package-lock.json  package.json  prisma.config.ts
frontend/prisma/: schema.prisma
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: cluster-card.tsx  navbar.tsx  (+5 more)
rnd/: calculations.md  context.md  frontend-creation.md  frontend.md  reqs.md
(+22 files in other folders)
